--- a/src/_components/home/index.sass
+++ b/src/_components/home/index.sass
@@ -344,23 +344,45 @@
 						text-align: center
 						color: $red
 						font-size: 18px
+	@media screen and ( max-width: 1920px)
+		.contact-left-col
+			.contact-info-list
+				max-height: 380px
+				overflow-y: auto
+				&::-webkit-scrollbar-track 
+						box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+						background-color: $red
+
+				&::-webkit-scrollbar 
+					width: 5px
+					height: 5px
+					background-color: $red
+
+				&::-webkit-scrollbar-thumb 
+					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
+					background-color: rgba($color: #000000, $alpha: .2)
+		.contact-right-col
+			.contact-form
+				padding-bottom: 0
+			.coppy-right
+				padding-top: 10px
+				.coppy
+					margin-bottom: 10px
 .home-product,
 .home-xuatkhau,
 .home-codong,
 .home-netco
 	padding-top: 120px
-@media screen and ( max-width: 1366px)
-	.home-product,
-	.home-xuatkhau,
-	.home-codong,
-	.home-netco
-		align-items: center
+@media screen and ( max-width: 1440px)
 	.home-footer
+		padding-top: 140px
 		.contact-left-col
 			.footer-title
-				margin-bottom: 20px
+				margin-bottom: 10px
+				h1 
+					font-size: 20/16*1rem
 			.contact-info-list
-				max-height: 320px
+				max-height: 310px
 				overflow-y: auto
 				&::-webkit-scrollbar-track 
 					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
@@ -374,6 +396,40 @@
 				&::-webkit-scrollbar-thumb 
 					box-shadow: inset 0 0 6px rgba(255, 255, 255, 0)
 					background-color: rgba($color: #000000, $alpha: .2)
+				.item
+					margin-bottom: 15px
+					.title
+						margin-bottom: 10px
+					ul
+						li 
+							margin-bottom: 10px
+		.contact-right-col
+			.title
+				margin-bottom: 10px
+				font-size: 20/16*1rem
+			.contact-form
+				padding-bottom: 0
+				.form-group
+					margin-bottom: 15px
+			.coppy-right
+				padding-top: 7px
+				.coppy
+					margin-bottom: 0
+
+@media screen and ( max-width: 1366px)
+	.home-product,
+	.home-xuatkhau,
+	.home-codong,
+	.home-netco
+		align-items: center
+	.home-footer
+		.contact-left-col
+			.footer-title
+				margin-bottom: 20px
+			.contact-info-list
+				max-height: 320px
+				overflow-y: auto
+				
 				.item
 					ul 
 						li
@@ -425,6 +481,7 @@
 			border: solid 1px $red
 			color: $red
 	.home-footer
+		padding-top: 60px
 		.contact-left-col
 			.footer-title
 				padding-right: 55px
@@ -432,6 +489,7 @@
 					font-size: 24/16*1rem
 			padding-right: 20px
 			.contact-info-list
+				max-height: 400px
 				padding-right: 10px
 		.contact-right-col
 			padding: 0
