--- a/src/_components/nhan-hieu-kd/nhan-hieu-kd.pug
+++ b/src/_components/nhan-hieu-kd/nhan-hieu-kd.pug
@@ -7,7 +7,7 @@ section.kv-section.list-brand-page
 				.brand-item
 					a(href="nhan-hieu-danh-sach.html")
 						.img
-							img(src="./assets/NhanHang/z-1.png", alt="")
+							img(src="./assets/NhanHang/z-1.png" alt="")
 						.title bột giặt
 			.col-lg-9.col-right
 				.single-swiper
@@ -16,19 +16,21 @@ section.kv-section.list-brand-page
 							-for(i=1; i<4; i++)
 								.swiper-slide
 									.item-pro
-										a(href="nhan-hieu-chi-tiet.html")
-											.img
-												img(src="./assets/NhanHang/pro-"+i+".png", alt="")
-											.content
-												.title Bột giặt hương hoa sứ 6kg
-												.price 120.000 đ
+										.img
+											a(href="nhan-hieu-chi-tiet.html")
+												img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+										.content
+											.product-title
+												a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+											.price-wrapper
+												.current 28.000 đ
 					.swiper-button-next
 		.brand-list.row
 			.col-lg-3.col-left
 				.brand-item
 					a(href="nhan-hieu-danh-sach.html")
 						.img
-							img(src="./assets/NhanHang/z-2.png", alt="")
+							img(src="./assets/NhanHang/z-2.png" alt="")
 						.title bột giặt
 			.col-lg-9.col-right
 				.single-swiper
@@ -37,44 +39,50 @@ section.kv-section.list-brand-page
 							-for(i=4; i<7; i++)
 								.swiper-slide
 									.item-pro
-										a(href="nhan-hieu-chi-tiet.html")
-											.img
-												img(src="./assets/NhanHang/pro-"+i+".png", alt="")
-											.content
-												.title Bột giặt hương hoa sứ 6kg
-												.price 120.000 đ
+										.img
+											a(href="nhan-hieu-chi-tiet.html")
+												img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+										.content
+											.product-title
+												a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+											.price-wrapper
+												.current 28.000 đ
 					.swiper-button-prev
 		.brand-list.row
 			.col-lg-3.col-left
 				.brand-item
 					a(href="nhan-hieu-danh-sach.html")
 						.img
-							img(src="./assets/NhanHang/z-3.png", alt="")
+							img(src="./assets/NhanHang/z-3.png" alt="")
 						.title bột giặt
 			.col-lg-9.col-right
 				.row
 					.col-lg-3
 						.item-pro
-							a(href="nhan-hieu-chi-tiet.html")
-								.img
-									img(src="./assets/NhanHang/pro-7.png", alt="")
-								.content
-									.title Bột giặt hương hoa sứ 6kg
-									.price 120.000 đ
+							.img
+								a(href="nhan-hieu-chi-tiet.html")
+									img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+							.content
+								.product-title
+									a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+								.price-wrapper
+									.current 28.000 đ
 					.col-lg-3
 						.item-pro
-							a(href="nhan-hieu-chi-tiet.html")
-								.img
-									img(src="./assets/NhanHang/pro-8.png", alt="")
-								.content
-									.title Bột giặt hương hoa sứ 6kg
-									.price 120.000 đ
+							.img
+								a(href="nhan-hieu-chi-tiet.html")
+									img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+							.content
+								.product-title
+									a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+								.price-wrapper
+									.current 28.000 đ
 		.brand-list.row
 			.col-lg-3.col-left
 				.brand-item
 					a(href="nhan-hieu-danh-sach.html")
 						.img
-							img(src="./assets/NhanHang/z-4.png", alt="")
+							img(src="./assets/NhanHang/z-4.png" alt="")
 						.title bột giặt
 			.col-lg-9.col-right
 				.single-swiper
@@ -83,19 +91,21 @@ section.kv-section.list-brand-page
 							-for(i=9; i<12; i++)
 								.swiper-slide
 									.item-pro
-										a(href="nhan-hieu-chi-tiet.html")
-											.img
-												img(src="./assets/NhanHang/pro-"+i+".png", alt="")
-											.content
-												.title Bột giặt hương hoa sứ 6kg
-												.price 120.000 đ
+										.img
+											a(href="nhan-hieu-chi-tiet.html")
+												img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+										.content
+											.product-title
+												a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+											.price-wrapper
+												.current 28.000 đ
 					.swiper-button-prev
 		.brand-list.row
 			.col-lg-3.col-left
 				.brand-item
 					a(href="nhan-hieu-danh-sach.html")
 						.img
-							img(src="./assets/NhanHang/z-5.png", alt="")
+							img(src="./assets/NhanHang/z-5.png" alt="")
 						.title bột giặt
 			.col-lg-9.col-right
 				.single-swiper
@@ -104,38 +114,44 @@ section.kv-section.list-brand-page
 							-for(i=12; i<15; i++)
 								.swiper-slide
 									.item-pro
-										a(href="nhan-hieu-chi-tiet.html")
-											.img
-												img(src="./assets/NhanHang/pro-"+i+".png", alt="")
-											.content
-												.title Bột giặt hương hoa sứ 6kg
-												.price 120.000 đ
+										.img
+											a(href="nhan-hieu-chi-tiet.html")
+												img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+										.content
+											.product-title
+												a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+											.price-wrapper
+												.current 28.000 đ
 					.swiper-button-next
 		.brand-list.row
 			.col-lg-3.col-left
 				.brand-item
 					a(href="nhan-hieu-danh-sach.html")
 						.img
-							img(src="./assets/NhanHang/z-6.png", alt="")
+							img(src="./assets/NhanHang/z-6.png" alt="")
 						.title bột giặt
 			.col-lg-9.col-right
 				.row
 					.col-lg-3
 						.item-pro
-							a(href="nhan-hieu-chi-tiet.html")
-								.img
-									img(src="./assets/NhanHang/pro-15.png", alt="")
-								.content
-									.title Bột giặt hương hoa sứ 6kg
-									.price 120.000 đ
+							.img
+								a(href="nhan-hieu-chi-tiet.html")
+									img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+							.content
+								.product-title
+									a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+								.price-wrapper
+									.current 28.000 đ
 					.col-lg-3
 						.item-pro
-							a(href="nhan-hieu-danh-sach.html")
-								.img
-									img(src="./assets/NhanHang/pro-16.png", alt="")
-								.content
-									.title Bột giặt hương hoa sứ 6kg
-									.price 120.000 đ
+							.img
+								a(href="nhan-hieu-chi-tiet.html")
+									img(src="./assets/NhanHang/pro-"+i+".png" alt="")
+							.content
+								.product-title
+									a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
+								.price-wrapper
+									.current 28.000 đ
 
 
 
