--- a/src/pages/nhan-hieu-danh-sach.pug
+++ b/src/pages/nhan-hieu-danh-sach.pug
@@ -5,4 +5,5 @@ block var
 block main
 	include ../_components/banner/pages-banner.pug
 	include ../_components/_layout/_breadcrumb.pug
+	include ../_components/nhan-hieu-kd/nhan-hieu-ds.pug
 
