--- a/src/_components/lien-he/lien-he.sass
+++ b/src/_components/lien-he/lien-he.sass
@@ -100,6 +100,10 @@
 		align-items: center
 		position: relative
 		width: 170px
+		margin: 0 auto
+		@media screen and ( min-width: 991.1px )
+			margin-left: auto
+			margin-right: 15px: 
 		.material-icons
 			position: absolute
 			right: 45px
