--- a/src/_components/gioi-thieu/about-1.pug
+++ b/src/_components/gioi-thieu/about-1.pug
@@ -24,50 +24,53 @@
 section#about-1.kv-section
 	.container
 		.caption
-			h2.title Tổng quan
+			.title Tổng quan
 			.desc Công ty CP Bột giặt NET tên giao dịch là NETCO, thành viên của VINACHEM (Tập đoàn hóa chất Việt Nam). NETCO  khởi đầu sự nghiệp của mình vào năm 1968. Những người sáng lập đã lấy chữ “NET” để đặt tên cho nhà máy và chọn Biên Hoà – một vùng đất mưa thuận gió hòa và được đánh giá là có tiềm năng cho phát triển công nghiệp – làm nơi “an cư lập nghiệp”.
 	.list-wrapper
 		.container
 			.list-ellip
 				.item
-					.title thị trường
-					.number
-						.counter(data-count='20') 0
-						span +
-					.brife-content quốc gia xuất khẩu sản phẩm
+					.content
+						.title thị trường
+						.number
+							.counter(data-count='50') 0
+							span +
+						.brife-content năm thành lập và phát triển
 				.item
-					.title công suất
-					.number
-						.counter(data-count='180') 0
-						span .000
-					.brife-content tấn bột giặt/ năm
+					.content
+						.title công suất
+						.number
+							.counter(data-count='180') 0
+							span .000
+						.brife-content tấn bột giặt/ năm
 				.item
-					.title công suất
-					.number
-						.counter(data-count='90') 0
-						span .000
-					.brife-content tấn chất tẩy rửa lỏng/ năm
+					.content
+						.title công suất
+						.number
+							.counter(data-count='90') 0
+							span .000
+						.brife-content tấn chất tẩy rửa lỏng/ năm
 			.list-items
-				.item.row
-					.col-lg-6.col-left-content
+				.item
+					.col-left-content
 						.desc 
 							p NETCO có 02 nhà máy, 01 tại Hà Nội và 01 tại Biên Hòa. Cả 02 nhà máy được các chuyên gia kỹ thuật hàng đầu đánh giá cao. Công suất thiết kế hiện tại: 180,000 tấn bột giặt và 90,000 tấn tẩy rửa lỏng.
 
 							p Hiện nay, NETCO là đối tác chiến lược của Unilever trong việc cung ứng các sản phẩm chất tẩy rửa có chất lượng cao như: Bột giặt OMO, Bột giặt Surf, Nước rửa chén Sunlight, Nước lau sàn nhà VIM…  Số lượng sản phẩm cung ứng cho Unilever tăng đều qua các năm là một minh chứng hùng hồn về năng lực sản xuất của doanh nghiệp.
-					.col-lg-6.col-right-image
+					.col-right-image
 						.img
 							img(src="./assets/about/i-1.png", alt="")
-				.item.row
-					.col-lg-6.col-left-content
+				.item
+					.col-left-content
 						.desc 
 							p Tại thị trường nội địa, NETCO chọn cho mình con đường riêng để đến với người tiêu dùng bằng tấm lòng của một nhà sản xuất chân chính, luôn giữ chữ “TÍN” với khách hàng qua “CHẤT LƯỢNG & GIÁ CẢ”. Vì vậy, so với sản phẩm của các công ty khác, các  sản phẩm của NETCO luôn dành được sự chấp nhận và tin tưởng của đông đảo người tiêu dùng.
-					.col-lg-6.col-right-image
+					.col-right-image
 						.img
 							img(src="./assets/about/i-2.png", alt="")
-				.item.row
-					.col-lg-6.col-left-content
+				.item
+					.col-left-content
 						.desc 
 							p Ngoài việc cung ứng các sản phẩm cho Unilever, công ty cổ phần bột giặt NET còn cung ứng một lượng lớn Bột giặt, Nước rửa chén cho thị trường xuất khẩu như: Nhật Bản, Úc, New Zealand, các nước ASEAN, Châu Mỹ, Châu  Phi … Việc thâm nhập thành công thị trường Nhật Bản - một thị trường được đánh giá là khó tính với yêu cầu về chất lượng cực kỳ nghiêm ngặt, doanh nghiệp đã minh chứng trình độ kỹ thuật công nghệ của mình đạt yêu cầu khu vực và thế giới. Chính việc cải tiến và cập nhật hệ thống máy móc, công nghệ mới vào trong sản xuất đã giúp NETCO mở rộng thêm được rất nhiều mối quan hệ hợp tác làm ăn, nhiều đối tác chiến lươc, kiến tạo nên thị phần vững chắc cho NETCO trong thị trường sản phẩm chất tẩy rửa trong và ngoài nước.
-					.col-lg-6.col-right-image
+					.col-right-image
 						.img
 							img(src="./assets/about/i-3.png", alt="")
