--- a/src/_components/lien-he/lien-he.sass
+++ b/src/_components/lien-he/lien-he.sass
@@ -48,6 +48,13 @@
 			li
 				.content
 					font-size: 13/16*1rem
+		@media screen and ( max-width: 575px)
+			min-height: 220px
+			margin-bottom: 20px
+			padding: 1rem
+			li
+				&:nth-child(2)
+					margin: 10px 0
 	iframe
 		width: 100%
 		box-shadow: 0 0px 20px -9px #a0b0c1
