--- a/src/_components/_globals/utilities.sass
+++ b/src/_components/_globals/utilities.sass
@@ -159,10 +159,15 @@
 		letter-spacing: normal
 		line-height: 28px
 		text-align: center
+	@media screen and ( max-width: 575px)
+		.title
+			font-size: 20/16*1rem
+			margin-bottom: 20px
 
 .pages
 	margin-left: auto
 	width: 100%
+	margin-top: 20px
 
 	.modulepager
 		display: flex
@@ -206,8 +211,6 @@
 					a,
 					span
 						color: $red
-					.SelectedPage
-						color: #ffffff
 .lcl
 	overflow: hidden
 	display: -webkit-box
@@ -226,8 +229,7 @@
 	&-4
 		-webkit-line-clamp: 4
 
-.product-detail-page,
-.news-detail-page
+.product-detail-page
 	#page-banner
 		display: none
 
@@ -765,7 +767,6 @@ html body input.RadInput_Empty
 	justify-content: center
 .zone-nav
 	width: 100%
-	height: 60px
 	background-color: #fbf7ef
 	.box-category
 		width: 200px
@@ -775,7 +776,7 @@ html body input.RadInput_Empty
 		justify-content: center
 		cursor: pointer
 		line-height: 50px
-		background-color: $main-color
+		background-color: $red
 		p
 			color: #ffffff
 			font-size: 16px
@@ -789,7 +790,7 @@ html body input.RadInput_Empty
 				transition: .3s
 		@media screen and ( max-width: 991px)
 			width: 100%
-		@media screen and ( min-width: 992px)
+		@media screen and ( min-width: 575px)
 			display: none
 
 	ul
@@ -832,18 +833,19 @@ html body input.RadInput_Empty
 					color: $red
 			&:last-child
 				margin-right: 0
-		@media screen and ( max-width: 1280px)
+		@media screen and ( max-width: 575.98px)
 			width: 100%
 			li
 				margin-right: 10px
+				text-align: center
 				a
 					font-size: 14px
-	@media screen and ( max-width: 991px)
+	@media screen and ( max-width: 575px)
 		ul
 			display: none
 			margin: unset
 			flex-direction: column
-	@media screen and ( max-width: 767px)
+	@media screen and ( max-width: 575px)
 		ul
 			li
 				width: 100%
@@ -960,4 +962,7 @@ html body input.RadInput_Empty
 				li
 					a,
 					span
+						color: $red
+				li+li
+					&::before
 						color: $red
