--- a/src/_components/lien-he/lien-he.sass
+++ b/src/_components/lien-he/lien-he.sass
@@ -70,6 +70,8 @@
 			position: relative
 			display: flex
 			align-items: center
+			@media screen and ( max-width: 480px )
+				display: block
 			.RadCaptcha.RadCaptcha_Default
 				div
 					display: flex
