--- a/src/_components/nhan-hieu-kd/nhan-hieu.sass
+++ b/src/_components/nhan-hieu-kd/nhan-hieu.sass
@@ -203,7 +203,7 @@
 				padding: 0 .5rem
 	.product-wrapper
 		padding-top: 30/16*1rem
-.product-detail-page
+.product-detail
 	background-color: #fbf7ef
 	padding-top: 105px
 	border-radius: 10px
